add tests for auction